2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed division by zero
	* shapes/Makefile.am: removed outdated OMIT_DEPENDENCIES
	* mapedit/compile.cc: std::string
	* mapedit/execbox.cc: #include <iostream>

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/shapelst.cc,chunklst.cc,paledit.cc,combo.cc: mouse wheel

2002-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc,mapedit/chunklst.cc,etc: "Paint with chunks" mode added.

	* mapedit/shapelst.cc,etc:  Keep shape browsers around so that
	they're at the same spot and selection when you return to them.

2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/exult_studio.glade: East is a direction too :-)
	* objs/egg.cc: use shape 200, frame 1-5 for new missile eggs
	* mapedit/exult_studio.glade: removed tabs from two names
	* mapedit/exult_studio.glade: made egg_window notebook unscrollable,
	since the scrollable option is apparently broken in windows

2002-10-10  Max Horn  <max@quendi.de>

	* Info.plist.in: No .nib file used anymore
	* configure.in: Removed some unnecessary flags on MacOS X
	* audio/midi_drivers/mac_midi.cc: Use assert() instead of DebugStr()
	* gumps/AudioOptions_gump.cc: Work around a compiler bug on MacOS X

2002-10-10  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc (Exec_process): Split off separate class to
	handle the plotform-dependend exec'ing.

2002-10-08  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/execbox.cc,compile.cc:  Added a 'compile' window for
	running the usecode compiler and seeing the errors.

2002-10-07  Max Horn  <max@quendi.de>

	* data/credits.txt: Jackchaos.com hosted the old forum
	* several files: got rid of #pragma implementation/interface - it didn't
	  help us much anyway but triggered a compiler error on MacOS X