@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2000-2001  The Exult Team
+ *  Copyright (C) 2000-2002  The Exult Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -253,12 +253,6 @@ int MenuList::handle_events(Game_window *gwin, Mouse *mouse)
 		} else if(event.type==SDL_KEYDOWN) {
 			mouse->hide();
 			mouse->blit_dirty();
-			if (!selected)
-			{
-			// if unselected (by 'MouseOut' event), just re-select
-				set_selection(selection);
-				continue;
-			}
 			switch(event.key.keysym.sym) {
 			case SDLK_x:
 				if(event.key.keysym.mod & KMOD_ALT) {
@@ -273,12 +267,24 @@ int MenuList::handle_events(Game_window *gwin, Mouse *mouse)
 				break;
 #endif
 			case SDLK_UP:
+				if (!selected)
+				{
+					// if unselected (by 'MouseOut' event), just re-select
+					set_selection(selection);
+					continue;
+				}
 				if(selection<=0)
 					set_selection(count-1);
 				else
 					set_selection(selection-1);
 				continue;
 			case SDLK_DOWN:
+				if (!selected)
+				{
+					// if unselected (by 'MouseOut' event), just re-select
+					set_selection(selection);
+					continue;
+				}
 				if(selection>=(count-1))
 					set_selection(0);
 				else
